microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locatorapp-deployment
  namespace: locatorapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: locatorapp-app
  template:
    metadata:
      labels:
        app: locatorapp-app
    spec:
      containers:
        - name: locatorapp-container
          image: jcvjorge/locatorapp:v2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: locatorapp-service
  namespace: locatorapp
spec:
  selector:
    app: locatorapp-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
