route-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-service-deployment
  namespace: locatorapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: route-service-app
  template:
    metadata:
      labels:
        app: route-service-app
    spec:
      containers:
        - name: route-service-container
          image: jcvjorge/route-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: route-service
  namespace: locatorapp
spec:
  selector:
    app: route-service-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
