ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubicate-ingress
  namespace: locatorapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /route(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: route-service
                port:
                  number: 8080
          - path: /locator(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: locatorapp-service
                port:
                  number: 8080
